testdata/cases/analyze/invalid_listen_address.expected
testdata/cases/analyze/invalid_listen_address.go:6:29: error[invalid-listen-address]: "localhost" is not a valid host:port listen address
